--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Page content -->
     <img src="main-qimg-3835ff6df66dc77af89310e507f82983.png" style="width:100%; height:auto; margin:0 auto;" alt="header pic">
     <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-        <h2 class="w3-wide">Hi, I'm Ghadeer ;)</h2>
+        <h2 class="w3-wide">Hi, I'm Ghadeer ;)</h2>     
         <p class="w3-opacity">an IS student who is always eager to learn more!</p>
         <p class="w3-justify">Seeking interest in training to gain experience, enhance my skills and understand the practical application of theoretical
             knowledge. </p>
@@ -55,8 +55,8 @@
                         <ul>
                                 <li>Airlines booking system using JAVA programming language.</li>
                                 <li>Designed a database for a restaurant ordering system.</li>
-                                <li>Built a website using a web development platform.</li>
-                                <li>Online rental shop Multi-tier web development using php, css and java script.</li>
+                                <li>Built a website using a web production.min platform.</li>
+                                <li>Online rental shop Multi-tier web production.min using php, css and java script.</li>
                                 <li>Project analysis and design on an appointment hospital system.</li>
                                 <li>Static and dynamic diagrams of an airline booking system.</li>
                                 <li>Technical and analytical researches</li>
@@ -118,7 +118,8 @@
                 </div>
             </div>
         </div>
-
+Let me know if u liked my page : 
+<div class="fa fa-thumbs-up" id="like_button_container"></div>
         <!-- End Page Content -->
     </div>
     <!-- Footer -->
@@ -127,7 +128,11 @@
         <a class="fa fa-twitter w3-hover-opacity" href="https://twitter.com/GhadeerNFL"></a>
         <a class="fa fa-linkedin w3-hover-opacity" href="https://www.linkedin.com/in/ghadeer-alluwaymi-72020815b"></a>
     </footer>
-   
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+  <script src="like_button.js"></script>
+
+
 </body>
 
 </html>
